--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
     left: 0;
     width: 100%;
     padding: 30px 12%;
-    background: #4d4187aa;
+    background: #4d4187;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -111,7 +111,7 @@ body {
     padding: 100px 15px;
 }
 
-.education__title {
+.title {
     font-size: 50px;
     text-align: center;
     margin: 80px 0;
@@ -200,6 +200,67 @@ body {
     line-height: 22px;
 }
 
-.item-icon {
-    font-size: 50px;
+.skills {
+    padding: 100px 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.skills__frontend,
+.skills__bakend,
+.skills__database,
+.skills__other {
+    display: flex;
+    flex-direction: column;
+}
+
+.skills__frontend h2 {
+    margin: 0 0 20px;
+}
+
+.skills__title {
+    font-size: 40px;
+    text-align: center;
+    color: #4ad1f7;
+    margin: 50px 0 20px;
+}
+
+.skills__items {
+    /* border: 1px solid white; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+    padding: 0 20px;
+}
+
+.skills__item {
+    /* border: 1px solid white; */
+    width: 200px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    border: 3px solid #4ad2f7ad;
+    box-shadow: 0 0 10px #4ad2f7ad;
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(10px);
+}
+
+.skills__item:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 25px #4ad1f7;
+}
+
+.skills__item-name {
+    margin-top: 15px;
+    font-size: 25px;
+    color: #300141;
+    font-weight: 600;
+}
+
+.skills__item-icon {
+    font-size: 70px;
 }
