--- a/style.css
+++ b/style.css
@@ -42,19 +42,195 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 1;
 }
 
 .header__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: radial-gradient(
+      ellipse 50% 35% at 50% 50%,
+      #36186b,
+      transparent
+    );
+    text-transform: uppercase;
     font-size: 48px;
-    color: #ffffff;
-    font-weight: 800;
-    cursor: pointer;
-    transition: 0.3s ease;
+    color: #ffe6ff;
+    text-shadow: 0 0 0.6rem #e6fbff, 0 0 1.5rem #24e9ff,
+      -0.2rem 0.1rem 1rem #24e9ff, 0.2rem 0.1rem 1rem #24e9ff,
+      0 -0.5rem 2rem #24a0ff, 0 0.5rem 3rem #24a0ff;
+    animation: shine 2s forwards, flicker 3s infinite;
 }
-
-.header__logo:hover {
-    transform: scale(1.1);
-}
+  
+  @keyframes blink {
+    0%,
+    22%,
+    36%,
+    75% {
+      color: #ffe6ff;
+      text-shadow: 0 0 0.6rem #e6fbff, 0 0 1.5rem #24e9ff,
+        -0.2rem 0.1rem 1rem #24e9ff, 0.2rem 0.1rem 1rem #24e9ff,
+        0 -0.5rem 2rem #24a0ff, 0 0.5rem 3rem #24a0ff;
+    }
+    28%,
+    33% {
+      color: #24e9ff;
+      text-shadow: none;
+    }
+    82%,
+    97% {
+      color: #24a0ff;
+      text-shadow: none;
+    }
+  }
+  
+  .flicker {
+    animation: shine 2s forwards, blink 3s 2s infinite;
+  }
+  
+  .fast-flicker {
+    animation: shine 2s forwards, blink 10s 1s infinite;
+  }
+  
+  @keyframes shine {
+    0% {
+      color: #36186b;
+      text-shadow: none;
+    }
+    100% {
+      color: #ffe6ff;
+      text-shadow: 0 0 0.6rem #e6fbff, 0 0 1.5rem #24e9ff,
+        -0.2rem 0.1rem 1rem #24e9ff, 0.2rem 0.1rem 1rem #24e9ff,
+        0 -0.5rem 2rem #24a0ff, 0 0.5rem 3rem #24a0ff;
+    }
+  }
+  
+  @keyframes flicker {
+    from {
+      opacity: 1;
+    }
+  
+    4% {
+      opacity: 0.9;
+    }
+  
+    6% {
+      opacity: 0.85;
+    }
+  
+    8% {
+      opacity: 0.95;
+    }
+  
+    10% {
+      opacity: 0.9;
+    }
+  
+    11% {
+      opacity: 0.922;
+    }
+  
+    12% {
+      opacity: 0.9;
+    }
+  
+    14% {
+      opacity: 0.95;
+    }
+  
+    16% {
+      opacity: 0.98;
+    }
+  
+    17% {
+      opacity: 0.9;
+    }
+  
+    19% {
+      opacity: 0.93;
+    }
+  
+    20% {
+      opacity: 0.99;
+    }
+  
+    24% {
+      opacity: 1;
+    }
+  
+    26% {
+      opacity: 0.94;
+    }
+  
+    28% {
+      opacity: 0.98;
+    }
+  
+    37% {
+      opacity: 0.93;
+    }
+  
+    38% {
+      opacity: 0.5;
+    }
+  
+    39% {
+      opacity: 0.96;
+    }
+  
+    42% {
+      opacity: 1;
+    }
+  
+    44% {
+      opacity: 0.97;
+    }
+  
+    46% {
+      opacity: 0.94;
+    }
+  
+    56% {
+      opacity: 0.9;
+    }
+  
+    58% {
+      opacity: 0.9;
+    }
+  
+    60% {
+      opacity: 0.99;
+    }
+  
+    68% {
+      opacity: 1;
+    }
+  
+    70% {
+      opacity: 0.9;
+    }
+  
+    72% {
+      opacity: 0.95;
+    }
+  
+    93% {
+      opacity: 0.93;
+    }
+  
+    95% {
+      opacity: 0.95;
+    }
+  
+    97% {
+      opacity: 0.93;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
 
 .header__navbar a{
     font-size: 28px;
@@ -76,9 +252,9 @@ body {
     display: none;
 }
 
-.home {
+.about {
     min-height: 100vh;
-    padding: 160px 12%;
+    padding: 160px 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -86,25 +262,165 @@ body {
     border: 1px solid white;
 }
 
-.home__title {
+.about__title {
     color: #4ad1f7;
     font-size: 50px;
     margin-bottom: 35px;
     font-weight: 700;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: animated-text 4s steps(29,end) 1s 1 normal both;
 }
 
-.home__about {
+@keyframes animated-text{
+    from{width: 0;}
+    to{width: 100%;}
+}
+
+.about__me {
     font-size: 30px;
     margin-bottom: 30px;
     font-weight: 600;
 }
 
-.home__text {
-    font-size: 25px;
-    width: 60%;
-    line-height: 40px;
+.about__text {
+    /* border: 1px solid black; */
+    width: 100%;
     text-align: justify;
     font-weight: 500;
+    margin-bottom: 35px;
+    line-height: 35px;
+}
+
+.about__text h2 {
+    text-align: center;
+    text-decoration: underline;
+    font-weight: 600;
+}
+
+.about__text p,
+.about__text ul {
+    font-size: 25px;
+    color: #ffffffc9;
+}
+
+.about__text span {
+    font-weight: 600;
+    color: #fffffff3;
+}
+
+.about__social-btns {
+    display: flex;
+    gap: 45px;
+    margin-top: 35px;
+    font-size: 45px;
+}
+
+.social-button {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    outline: none;
+    width: 70px;
+    height: 70px;
+    text-decoration: none;
+    border-radius: 100%;
+    background: white;
+    text-align: center;
+}
+
+.social-button::after {
+    content: '';
+    position: absolute;
+    top: -1px;
+    left: 50%;
+    display: block;
+    width: 0;
+    height: 0;
+    border-radius: 100%;
+    transition: 0.3s;
+}
+
+.social-button:focus i,
+.social-button:hover i{
+    color: #ffffff;
+}
+
+.social-button:focus::after,
+.social-button:hover::after {
+    width: calc(100% + 2px);
+    height: calc(100% + 2px);
+    margin-left: calc(-50% - 1px);
+}
+
+.social-button i {
+  position: absolute;
+  z-index: 1;
+  transition: 0.3s;
+}
+
+.social-button.email {
+    color: #058abf;
+}
+
+.social-button.email::after {
+    background: #058abf;
+}
+
+.social-button.telegram {
+    color: #0303fc;
+}
+
+.social-button.telegram::after {
+    background: #0303fc;
+}
+
+.social-button.github {
+    color: #250132;
+}
+
+.social-button.github::after {
+    background-color: #250132;
+}
+
+.social-button span {
+    width: 150px;
+    color: #666;
+    position: absolute;
+    bottom: 0;
+    left: -25px;
+    right: -25px;
+    padding: 5px 7px;
+    z-index: -1;
+    font-size: 18px;
+    border-radius: 2px;
+    background: #fff;
+    visibility: hidden;
+    opacity: 0;
+    -o-transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    -webkit-transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    -moz-transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.social-button span:before {
+    content:'';
+    width: 0; 
+    height: 0; 
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #fff;
+    position:absolute;
+    bottom:-5px;
+    left:40px;
+}
+
+.social-button:hover span {
+    bottom: 80px;
+    visibility: visible;
+    opacity: 1;
 }
 
 .education {
@@ -263,4 +579,343 @@ body {
 
 .skills__item-icon {
     font-size: 70px;
+}
+
+.project {
+    padding: 100px 15px;
+    min-height: 100vh;
+    /* border: 1px solid black; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.project__cards {
+    /* position: relative; */
+    border: 1px solid black;
+    width: 80%;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-wrapper.project__slider {
+    position: relative;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    /* width: 100%; */
+    height: 100%;
+    /* gap: 15px; */
+}
+
+.project__card {
+    position: relative;
+    /* border: 1px solid black; */
+    width: 700px;
+    height: 80%;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+/* .swiper-slide.swiper-slide-fully-visible {
+    transform: rotateZ(0deg);
+} */
+
+.project__img {
+    object-fit: fill;
+    border-radius: 30px;
+}
+
+.swiper-button-prev,
+.swiper-button-next,
+.swiper-pagination {
+    color: #4F468C;
+}
+
+.project__arrow.swiper-button-prev {
+    animation: animateLeft 2s infinite;
+}
+
+.project__arrow.swiper-button-next {
+    animation: animateRight 2s infinite;
+}
+
+.swiper-button-prev span,
+.swiper-button-next span {
+    display: block;
+    min-width: 32px;
+    height: 32px;
+}
+
+.swiper-button-prev span {
+    position: absolute;
+    border-top: 3.5px solid #4F468C;
+    border-left: 3.5px solid #4F468C;
+    transform: rotate(-45deg);
+    left: 18px;
+}
+
+.swiper-button-prev span:nth-child(2) {
+    left: 28px;
+}
+
+.swiper-button-prev span:nth-child(3) {
+    left: 38px;
+}
+
+.swiper-button-next span {
+    position: absolute;
+    border-bottom: 3.5px solid #4F468C;
+    border-right: 3.5px solid #4F468C;
+    transform: rotate(-45deg);
+    right: 18px;
+}
+
+.swiper-button-next span:nth-child(2) {
+    right: 28px;
+}
+
+.swiper-button-next span:nth-child(3) {
+    right: 38px;
+}
+
+@keyframes animateRight {
+    0% {
+        opacity: 0;
+        transform: translate(-10px, 0);
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: translate(10px, 0);
+    }
+}
+
+@keyframes animateLeft {
+    0% {
+        opacity: 0;
+        transform: translate(10px, 0);
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: translate(-10px, 0);
+    }
+}
+
+.swiper-pagination-bullet-active {
+    background: #300141;
+}
+
+.project__card:hover .project__description {
+    opacity: 1;
+}
+
+.project__description {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(15px);
+    border-radius: 30px;
+}
+
+.project__name {
+    font-size: 35px;
+    margin-bottom: 15px;
+}
+
+.project__explanation {
+    font-size: 25px;
+    margin-bottom: 15px;
+}
+
+.project__show {
+    font-size: 50px;
+}
+
+.window-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    z-index: 999;
+}
+
+.project__modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    height: 95%;
+    overflow: auto;
+    border-radius: 30px;
+    background-color: #adbddeef;
+    color: #300141;
+    padding: 25px;
+    overflow-y: hidden;
+}
+
+.project__modal-header {
+    display: flex;
+    margin-bottom: 5px;
+}
+
+.project__modal-title {
+    text-align: center;
+    width: 100%;
+}
+
+.project__modal-close {
+    font-size: 35px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.project__modal-container {
+    display: flex;
+    height: 90%;
+}
+
+.project__modal-images {
+    width: 100%;
+    flex: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.project__modal-content {
+    border: 1px solid black;
+    margin-top: 15px;
+    width: 100%;
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+    padding: 5px 0 0 35px;
+    height: auto;
+    /* justify-content: center;
+    align-items: center; */
+}
+
+.modal__links {
+    /* border: 1px solid black; */
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5px;
+}
+
+.modal__link {
+    display: flex;
+    margin-bottom: 5px;
+    font-size: 22px;
+}
+
+.modal__link p {
+    font-weight: 500;
+    margin-right: 10px;
+}
+
+.modal__icon {
+    font-size: 28px;
+    margin-right: 5px;
+}
+
+.modal__details {
+    border: 1px solid black;
+    width: 100%;
+    display: flex;
+    gap: 30px;
+    padding: 0 10px;
+}
+
+.modal__description {
+    font-size: 22px;
+    margin-bottom: 5px;
+    font-weight: 500;
+    margin-top: 5px;
+}
+
+.modal__details li {
+    font-size: 20px;
+}
+
+.project__modal-content.recipes li {
+    font-size: 20px;
+}
+
+.project__modal-content span {
+    font-weight: 600;
+}
+
+.modal__tools-title {
+    margin-top: 15px;
+}
+
+.modal__title {
+    font-size: 21px;
+    font-weight: 500;
+    text-decoration: underline;
+}
+
+.project__modal-images.weather {
+    width: 850px;
+    height: 400px;
+}
+
+.project__modal-images.recipes {
+    width: 600px;
+    height: 700px;
+}
+
+.project__modal-images.tasks {
+    width: 900px;
+    height: 450px;
+}
+
+.modal__tools {
+    padding-left: 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.modal__tools li {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+    padding-left: 10px;
+    position: relative;
+}
+
+.modal__tools li::before {
+    content: "•";
+    position: absolute;
+    left: 0;
+    font-size: 20px;
+    line-height: 1;
 }
